welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:5: error: illegal start of simple expression
for (i<-1 to 4)} 
               ^